--- a/package.xml
+++ b/package.xml
@@ -11,8 +11,8 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2012-09-04</date>
- <time>15:05:23</time>
+ <date>2012-09-28</date>
+ <time>12:59:51</time>
  <version>
   <release>2.0.0beta3</release>
   <api>1.1.0</api>
@@ -58,12 +58,6 @@
         <dir name="Decorator">
          <file name="Log.php" role="php" />
         </dir> <!-- /lib/Horde/Kolab/Storage/Data/Decorator -->
-        <dir name="Format">
-         <file name="Mime.php" role="php" />
-        </dir> <!-- /lib/Horde/Kolab/Storage/Data/Format -->
-        <dir name="Parser">
-         <file name="Structure.php" role="php" />
-        </dir> <!-- /lib/Horde/Kolab/Storage/Data/Parser -->
         <dir name="Query">
          <dir name="History">
           <file name="Base.php" role="php" />
@@ -78,10 +72,8 @@
         </dir> <!-- /lib/Horde/Kolab/Storage/Data/Query -->
         <file name="Base.php" role="php" />
         <file name="Cached.php" role="php" />
-        <file name="Format.php" role="php" />
-        <file name="Modifiable.php" role="php" />
+        <file name="Exception.php" role="php" />
         <file name="Old.php" role="php" />
-        <file name="Parser.php" role="php" />
         <file name="Query.php" role="php" />
        </dir> <!-- /lib/Horde/Kolab/Storage/Data -->
        <dir name="Decorator">
@@ -181,6 +173,15 @@
         <file name="Synchronization.php" role="php" />
         <file name="Tools.php" role="php" />
        </dir> <!-- /lib/Horde/Kolab/Storage/List -->
+       <dir name="Object">
+        <dir name="Writer">
+         <file name="Format.php" role="php" />
+         <file name="Raw.php" role="php" />
+        </dir> <!-- /lib/Horde/Kolab/Storage/Object/Writer -->
+        <file name="Exception.php" role="php" />
+        <file name="MimeType.php" role="php" />
+        <file name="Writer.php" role="php" />
+       </dir> <!-- /lib/Horde/Kolab/Storage/Object -->
        <dir name="QuerySet">
         <file name="Base.php" role="php" />
         <file name="Cached.php" role="php" />
@@ -194,6 +195,7 @@
        <file name="Exception.php" role="php" />
        <file name="Factory.php" role="php" />
        <file name="Folder.php" role="php" />
+       <file name="Object.php" role="php" />
        <file name="Queriable.php" role="php" />
        <file name="Query.php" role="php" />
        <file name="QuerySet.php" role="php" />
@@ -475,6 +477,14 @@
      <dir name="Kolab">
       <dir name="Storage">
        <dir name="ComponentTest">
+        <dir name="Data">
+         <dir name="Object">
+          <dir name="Message">
+           <file name="ModifiedTest.php" role="test" />
+           <file name="NewTest.php" role="test" />
+          </dir> <!-- /test/Horde/Kolab/Storage/ComponentTest/Data/Object/Message -->
+         </dir> <!-- /test/Horde/Kolab/Storage/ComponentTest/Data/Object -->
+        </dir> <!-- /test/Horde/Kolab/Storage/ComponentTest/Data -->
         <dir name="List">
          <dir name="Query">
           <dir name="Acl">
@@ -495,6 +505,7 @@
         <file name="event.3.xml.qp" role="test" />
         <file name="event.struct" role="test" />
         <file name="event.xml.qp" role="test" />
+        <file name="note.eml" role="test" />
         <file name="preferences.1" role="test" />
         <file name="preferences.2" role="test" />
        </dir> <!-- /test/Horde/Kolab/Storage/fixtures -->
@@ -503,6 +514,7 @@
        </dir> <!-- /test/Horde/Kolab/Storage/Server -->
        <dir name="Stub">
         <file name="DataQuery.php" role="test" />
+        <file name="Driver.php" role="test" />
        </dir> <!-- /test/Horde/Kolab/Storage/Stub -->
        <dir name="Unit">
         <dir name="Cache">
@@ -512,12 +524,6 @@
          <dir name="Decorator">
           <file name="LogTest.php" role="test" />
          </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Decorator -->
-         <dir name="Format">
-          <file name="MimeTest.php" role="test" />
-         </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Format -->
-         <dir name="Parser">
-          <file name="StructureTest.php" role="test" />
-         </dir> <!-- /test/Horde/Kolab/Storage/Unit/Data/Parser -->
          <dir name="Query">
           <dir name="History">
            <file name="BaseTest.php" role="test" />
@@ -591,12 +597,20 @@
          </dir> <!-- /test/Horde/Kolab/Storage/Unit/List/Synchronization -->
          <file name="ToolsTest.php" role="test" />
         </dir> <!-- /test/Horde/Kolab/Storage/Unit/List -->
+        <dir name="Object">
+         <dir name="Writer">
+          <file name="FormatTest.php" role="test" />
+          <file name="RawTest.php" role="test" />
+         </dir> <!-- /test/Horde/Kolab/Storage/Unit/Object/Writer -->
+         <file name="MimeTypeTest.php" role="test" />
+        </dir> <!-- /test/Horde/Kolab/Storage/Unit/Object -->
         <dir name="QuerySet">
          <file name="UncachedTest.php" role="test" />
         </dir> <!-- /test/Horde/Kolab/Storage/Unit/QuerySet -->
         <file name="CachedTest.php" role="test" />
         <file name="CacheTest.php" role="test" />
         <file name="FactoryTest.php" role="test" />
+        <file name="ObjectTest.php" role="test" />
         <file name="SynchronizationTest.php" role="test" />
         <file name="UncachedTest.php" role="test" />
        </dir> <!-- /test/Horde/Kolab/Storage/Unit -->
@@ -718,6 +732,7 @@
    <install as="Horde/Kolab/Storage/Exception.php" name="lib/Horde/Kolab/Storage/Exception.php" />
    <install as="Horde/Kolab/Storage/Factory.php" name="lib/Horde/Kolab/Storage/Factory.php" />
    <install as="Horde/Kolab/Storage/Folder.php" name="lib/Horde/Kolab/Storage/Folder.php" />
+   <install as="Horde/Kolab/Storage/Object.php" name="lib/Horde/Kolab/Storage/Object.php" />
    <install as="Horde/Kolab/Storage/Queriable.php" name="lib/Horde/Kolab/Storage/Queriable.php" />
    <install as="Horde/Kolab/Storage/Query.php" name="lib/Horde/Kolab/Storage/Query.php" />
    <install as="Horde/Kolab/Storage/QuerySet.php" name="lib/Horde/Kolab/Storage/QuerySet.php" />
@@ -727,14 +742,10 @@
    <install as="Horde/Kolab/Storage/Cache/Data.php" name="lib/Horde/Kolab/Storage/Cache/Data.php" />
    <install as="Horde/Kolab/Storage/Data/Base.php" name="lib/Horde/Kolab/Storage/Data/Base.php" />
    <install as="Horde/Kolab/Storage/Data/Cached.php" name="lib/Horde/Kolab/Storage/Data/Cached.php" />
-   <install as="Horde/Kolab/Storage/Data/Format.php" name="lib/Horde/Kolab/Storage/Data/Format.php" />
-   <install as="Horde/Kolab/Storage/Data/Modifiable.php" name="lib/Horde/Kolab/Storage/Data/Modifiable.php" />
+   <install as="Horde/Kolab/Storage/Data/Exception.php" name="lib/Horde/Kolab/Storage/Data/Exception.php" />
    <install as="Horde/Kolab/Storage/Data/Old.php" name="lib/Horde/Kolab/Storage/Data/Old.php" />
-   <install as="Horde/Kolab/Storage/Data/Parser.php" name="lib/Horde/Kolab/Storage/Data/Parser.php" />
    <install as="Horde/Kolab/Storage/Data/Query.php" name="lib/Horde/Kolab/Storage/Data/Query.php" />
    <install as="Horde/Kolab/Storage/Data/Decorator/Log.php" name="lib/Horde/Kolab/Storage/Data/Decorator/Log.php" />
-   <install as="Horde/Kolab/Storage/Data/Format/Mime.php" name="lib/Horde/Kolab/Storage/Data/Format/Mime.php" />
-   <install as="Horde/Kolab/Storage/Data/Parser/Structure.php" name="lib/Horde/Kolab/Storage/Data/Parser/Structure.php" />
    <install as="Horde/Kolab/Storage/Data/Query/History.php" name="lib/Horde/Kolab/Storage/Data/Query/History.php" />
    <install as="Horde/Kolab/Storage/Data/Query/Preferences.php" name="lib/Horde/Kolab/Storage/Data/Query/Preferences.php" />
    <install as="Horde/Kolab/Storage/Data/Query/History/Base.php" name="lib/Horde/Kolab/Storage/Data/Query/History/Base.php" />
@@ -796,6 +807,11 @@
    <install as="Horde/Kolab/Storage/List/Synchronization/Base.php" name="lib/Horde/Kolab/Storage/List/Synchronization/Base.php" />
    <install as="Horde/Kolab/Storage/List/Synchronization/Listener.php" name="lib/Horde/Kolab/Storage/List/Synchronization/Listener.php" />
    <install as="Horde/Kolab/Storage/List/Synchronization/Decorator/Log.php" name="lib/Horde/Kolab/Storage/List/Synchronization/Decorator/Log.php" />
+   <install as="Horde/Kolab/Storage/Object/Exception.php" name="lib/Horde/Kolab/Storage/Object/Exception.php" />
+   <install as="Horde/Kolab/Storage/Object/MimeType.php" name="lib/Horde/Kolab/Storage/Object/MimeType.php" />
+   <install as="Horde/Kolab/Storage/Object/Writer.php" name="lib/Horde/Kolab/Storage/Object/Writer.php" />
+   <install as="Horde/Kolab/Storage/Object/Writer/Format.php" name="lib/Horde/Kolab/Storage/Object/Writer/Format.php" />
+   <install as="Horde/Kolab/Storage/Object/Writer/Raw.php" name="lib/Horde/Kolab/Storage/Object/Writer/Raw.php" />
    <install as="Horde/Kolab/Storage/QuerySet/Base.php" name="lib/Horde/Kolab/Storage/QuerySet/Base.php" />
    <install as="Horde/Kolab/Storage/QuerySet/Cached.php" name="lib/Horde/Kolab/Storage/QuerySet/Cached.php" />
    <install as="Horde/Kolab/Storage/QuerySet/Uncached.php" name="lib/Horde/Kolab/Storage/QuerySet/Uncached.php" />
@@ -893,6 +909,8 @@
    <install as="Horde/Kolab/Storage/phpunit.xml" name="test/Horde/Kolab/Storage/phpunit.xml" />
    <install as="Horde/Kolab/Storage/Scenario.php" name="test/Horde/Kolab/Storage/Scenario.php" />
    <install as="Horde/Kolab/Storage/TestCase.php" name="test/Horde/Kolab/Storage/TestCase.php" />
+   <install as="Horde/Kolab/Storage/ComponentTest/Data/Object/Message/ModifiedTest.php" name="test/Horde/Kolab/Storage/ComponentTest/Data/Object/Message/ModifiedTest.php" />
+   <install as="Horde/Kolab/Storage/ComponentTest/Data/Object/Message/NewTest.php" name="test/Horde/Kolab/Storage/ComponentTest/Data/Object/Message/NewTest.php" />
    <install as="Horde/Kolab/Storage/ComponentTest/List/CacheTest.php" name="test/Horde/Kolab/Storage/ComponentTest/List/CacheTest.php" />
    <install as="Horde/Kolab/Storage/ComponentTest/List/Query/Acl/BaseTest.php" name="test/Horde/Kolab/Storage/ComponentTest/List/Query/Acl/BaseTest.php" />
    <install as="Horde/Kolab/Storage/ComponentTest/List/Query/List/BaseTest.php" name="test/Horde/Kolab/Storage/ComponentTest/List/Query/List/BaseTest.php" />
@@ -903,21 +921,22 @@
    <install as="Horde/Kolab/Storage/fixtures/event.3.xml.qp" name="test/Horde/Kolab/Storage/fixtures/event.3.xml.qp" />
    <install as="Horde/Kolab/Storage/fixtures/event.struct" name="test/Horde/Kolab/Storage/fixtures/event.struct" />
    <install as="Horde/Kolab/Storage/fixtures/event.xml.qp" name="test/Horde/Kolab/Storage/fixtures/event.xml.qp" />
+   <install as="Horde/Kolab/Storage/fixtures/note.eml" name="test/Horde/Kolab/Storage/fixtures/note.eml" />
    <install as="Horde/Kolab/Storage/fixtures/preferences.1" name="test/Horde/Kolab/Storage/fixtures/preferences.1" />
    <install as="Horde/Kolab/Storage/fixtures/preferences.2" name="test/Horde/Kolab/Storage/fixtures/preferences.2" />
    <install as="Horde/Kolab/Storage/Server/DriverTest.php" name="test/Horde/Kolab/Storage/Server/DriverTest.php" />
    <install as="Horde/Kolab/Storage/Stub/DataQuery.php" name="test/Horde/Kolab/Storage/Stub/DataQuery.php" />
+   <install as="Horde/Kolab/Storage/Stub/Driver.php" name="test/Horde/Kolab/Storage/Stub/Driver.php" />
    <install as="Horde/Kolab/Storage/Unit/CachedTest.php" name="test/Horde/Kolab/Storage/Unit/CachedTest.php" />
    <install as="Horde/Kolab/Storage/Unit/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/FactoryTest.php" name="test/Horde/Kolab/Storage/Unit/FactoryTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/ObjectTest.php" name="test/Horde/Kolab/Storage/Unit/ObjectTest.php" />
    <install as="Horde/Kolab/Storage/Unit/SynchronizationTest.php" name="test/Horde/Kolab/Storage/Unit/SynchronizationTest.php" />
    <install as="Horde/Kolab/Storage/Unit/UncachedTest.php" name="test/Horde/Kolab/Storage/Unit/UncachedTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Cache/DataTest.php" name="test/Horde/Kolab/Storage/Unit/Cache/DataTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/CachedTest.php" name="test/Horde/Kolab/Storage/Unit/Data/CachedTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Decorator/LogTest.php" />
-   <install as="Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Format/MimeTest.php" />
-   <install as="Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Parser/StructureTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/History/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/History/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/Preferences/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/Data/Query/Preferences/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/Data/Query/Preferences/CacheTest.php" />
@@ -950,6 +969,9 @@
    <install as="Horde/Kolab/Storage/Unit/List/Query/Share/CacheTest.php" name="test/Horde/Kolab/Storage/Unit/List/Query/Share/CacheTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Synchronization/BaseTest.php" name="test/Horde/Kolab/Storage/Unit/List/Synchronization/BaseTest.php" />
    <install as="Horde/Kolab/Storage/Unit/List/Synchronization/Decorator/LogTest.php" name="test/Horde/Kolab/Storage/Unit/List/Synchronization/Decorator/LogTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/Object/MimeTypeTest.php" name="test/Horde/Kolab/Storage/Unit/Object/MimeTypeTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/Object/Writer/FormatTest.php" name="test/Horde/Kolab/Storage/Unit/Object/Writer/FormatTest.php" />
+   <install as="Horde/Kolab/Storage/Unit/Object/Writer/RawTest.php" name="test/Horde/Kolab/Storage/Unit/Object/Writer/RawTest.php" />
    <install as="Horde/Kolab/Storage/Unit/QuerySet/UncachedTest.php" name="test/Horde/Kolab/Storage/Unit/QuerySet/UncachedTest.php" />
   </filelist>
  </phprelease>
@@ -1180,7 +1202,7 @@
    <stability>
     <release>beta</release>
     <api>stable</api></stability>
-   <date>2012-09-04</date>
+   <date>2012-09-28</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [gwr] Allow setting the default folder.
